build: lombok dependencies

--- a/user-identity-provider/build.gradle
+++ b/user-identity-provider/build.gradle
@@ -18,4 +18,10 @@ java {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 }
