feat(dev-profile config): disable eureka server client-like behavior

--- a/service-registry/src/main/resources/application-dev.yml
+++ b/service-registry/src/main/resources/application-dev.yml
@@ -4,3 +4,10 @@ server:
 spring:
   application:
     name: service-registry
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+  server:
+    wait-time-in-ms-when-sync-empty: 0
