--- a/authorization-server/src/main/resources/application-dev.yml
+++ b/authorization-server/src/main/resources/application-dev.yml
@@ -12,3 +12,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
