--- a/dev-resource-server/build.gradle
+++ b/dev-resource-server/build.gradle
@@ -18,4 +18,6 @@ java {
 
 dependencies {
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
