feat(dev-profile config): configure introspection endpoint & client credentials

--- a/dev-resource-server/src/main/resources/application-dev.yml
+++ b/dev-resource-server/src/main/resources/application-dev.yml
@@ -4,6 +4,13 @@ server:
 spring:
   application:
     name: dev-resource-server-1
+  security:
+    oauth2:
+      resourceserver:
+        opaquetoken:
+          introspection-uri: http://localhost:9000/oauth2/introspect
+          client-id: dev-client
+          client-secret: dev
 
 eureka:
   instance:
