--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'lab4-web'
 include 'service-registry'
 include 'authorization-server'
 include 'dev-resource-server'
+include 'api-gateway'
