--- a/api-gateway/src/main/resources/application-dev.yml
+++ b/api-gateway/src/main/resources/application-dev.yml
@@ -5,6 +5,21 @@ spring:
   application:
     name: api-gateway
 
+  security:
+    oauth2:
+      client:
+        registration:
+          dev-client:
+            provider: spring-idp
+            client-id: dev-client
+            client-secret: dev
+            authorization-grant-type: authorization_code
+            redirect-uri: "http://localhost:8080/login/oauth2/code/{registrationId}"
+            scope: openid, profile, user.read, user.write
+        provider:
+          spring-idp:
+            issuer-uri: http://localhost:9000
+
 eureka:
   instance:
     lease-expiration-duration-in-seconds: 5
