feat(dev-profile config): configure rsa key set

--- a/authorization-server/src/main/resources/application-dev.yml
+++ b/authorization-server/src/main/resources/application-dev.yml
@@ -5,6 +5,13 @@ spring:
   application:
     name: authorization-server
 
+  security:
+    keys:
+      rsa:
+        - id: "dev-key"
+          private-key: "classpath:dev_rsa.key"
+          public-key: "classpath:dev_rsa.pub"
+
 eureka:
   instance:
     lease-expiration-duration-in-seconds: 5
