build: register authorization api submodule

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include 'service-registry'
 include 'authorization-server'
 include 'dev-resource-server'
 include 'api-gateway'
+include 'authorization-api'
