--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,7 @@ services:
       POSTGRESQL_DATABASE: postgre-dev
       POSTGRESQL_USERNAME: dev-user
       POSTGRESQL_PASSWORD: dev-password
+    volumes:
+      - lab4-web-dev-db-volume:/bitnami/postgresql
     ports:
       - "5432:5432"
