--- a/authorization-server/src/main/resources/application-dev.yml
+++ b/authorization-server/src/main/resources/application-dev.yml
@@ -10,6 +10,14 @@ spring:
     username: dev-user
     password: dev-password
     driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-timeout: 30000 # specifies the max time driver will wait for connection from cp
+      maximum-pool-size: 10 # max cp size
+      minimum-idle: 10 # minimal amount of idling connections
+      initialization-fail-timeout: 1 # time required to establish initial connection
+      leak-detection-threshold: 0 # time allowed for connection to be outside the cp
+      pool-name: hikari-pool-auth-service # cp name
+      register-mbeans: true # enabling jmx beans for monitoring purposes
 
   security:
     keys:
