feat(dev-profile config): register common & dev paths for flyway migrations

--- a/authorization-server/src/main/resources/application-dev.yml
+++ b/authorization-server/src/main/resources/application-dev.yml
@@ -19,6 +19,11 @@ spring:
       pool-name: hikari-pool-auth-service # cp name
       register-mbeans: true # enabling jmx beans for monitoring purposes
 
+  flyway:
+    locations:
+      - classpath:db/{vendor}/common
+      - classpath:db/{vendor}/dev
+
   security:
     keys:
       rsa:
