build: enable spotless formatter toggle off/on

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ allprojects {
 			googleJavaFormat().aosp()
 
 			formatAnnotations()
+
+            toggleOffOn('formatter:off', 'formatter:on')
 		}
 	}
 
