--- a/dev-resource-server/src/main/resources/application-dev.yml
+++ b/dev-resource-server/src/main/resources/application-dev.yml
@@ -23,3 +23,21 @@ management:
     web:
       exposure:
         include: '*'
+
+resourceserver:
+  cors:
+    configs:
+      - mapping-pattern: /**
+        allowed-origin-patterns:
+          - http://localhost:8080
+          - http://localhost:9000
+        allow-credentials: true
+        allowed-methods:
+          - GET
+          - POST
+          - PUT
+          - DELETE
+          - PATCH
+        allowed-headers:
+          - Authorization
+        max-age: 3600
