--- a/authorization-server/src/main/resources/application-dev.yml
+++ b/authorization-server/src/main/resources/application-dev.yml
@@ -44,3 +44,20 @@ management:
     web:
       exposure:
         include: '*'
+
+authorizationserver:
+  cors:
+    configs:
+      - mapping-pattern: /**
+        allowed-origin-patterns:
+          - http://localhost:8080
+        allow-credentials: true
+        allowed-methods:
+          - GET
+          - POST
+          - PUT
+          - DELETE
+          - PATCH
+        allowed-headers:
+          - Authorization
+        max-age: 3600
