feat(dev-profile config): add api gateway CORS configuration

--- a/api-gateway/src/main/resources/application-dev.yml
+++ b/api-gateway/src/main/resources/application-dev.yml
@@ -46,3 +46,20 @@ management:
     web:
       exposure:
         include: '*'
+
+gateway:
+  cors:
+    configs:
+      - mapping-pattern: /**
+        allowed-origin-patterns:
+          - http://localhost:9000
+        allow-credentials: true
+        allowed-methods:
+          - GET
+          - POST
+          - PUT
+          - DELETE
+          - PATCH
+        allowed-headers:
+          - Authorization
+        max-age: 3600
