feat(dev-profile config): add special filter to remove duplicated HTTP headers

--- a/api-gateway/src/main/resources/application-dev.yml
+++ b/api-gateway/src/main/resources/application-dev.yml
@@ -9,6 +9,7 @@ spring:
     gateway:
       default-filters:
         - TokenRelay=
+        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_UNIQUE
       routes:
         - id: dev-resource
           uri: lb://DEV-RESOURCE-SERVER-1/
