feat(dev-profile config): set the static resources endpoint to /static/** mapping

--- a/authorization-server/src/main/resources/application-dev.yml
+++ b/authorization-server/src/main/resources/application-dev.yml
@@ -5,6 +5,9 @@ spring:
   application:
     name: authorization-server
 
+  mvc:
+    static-path-pattern: /static/**
+
   datasource:
     url: jdbc:postgresql://localhost:5432/postgre-dev
     username: dev-user
