--- a/api-gateway/src/main/resources/application-dev.yml
+++ b/api-gateway/src/main/resources/application-dev.yml
@@ -9,6 +9,7 @@ spring:
     gateway:
       default-filters:
         - TokenRelay=
+        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_UNIQUE
       routes:
         - id: dev-resource
           uri: lb://DEV-RESOURCE-SERVER-1/
@@ -46,3 +47,20 @@ management:
     web:
       exposure:
         include: '*'
+
+gateway:
+  cors:
+    configs:
+      - mapping-pattern: /**
+        allowed-origin-patterns:
+          - http://localhost:9000
+        allow-credentials: true
+        allowed-methods:
+          - GET
+          - POST
+          - PUT
+          - DELETE
+          - PATCH
+        allowed-headers:
+          - Authorization
+        max-age: 3600
