--- a/authorization-server/src/main/resources/application-dev.yml
+++ b/authorization-server/src/main/resources/application-dev.yml
@@ -5,6 +5,9 @@ spring:
   application:
     name: authorization-server
 
+  mvc:
+    static-path-pattern: /static/**
+
   datasource:
     url: jdbc:postgresql://localhost:5432/postgre-dev
     username: dev-user
@@ -44,3 +47,20 @@ management:
     web:
       exposure:
         include: '*'
+
+authorizationserver:
+  cors:
+    configs:
+      - mapping-pattern: /**
+        allowed-origin-patterns:
+          - http://localhost:8080
+        allow-credentials: true
+        allowed-methods:
+          - GET
+          - POST
+          - PUT
+          - DELETE
+          - PATCH
+        allowed-headers:
+          - Authorization
+        max-age: 3600
